--- a/P3GLSL/P3GLSL.vcxproj.filters
+++ b/P3GLSL/P3GLSL.vcxproj.filters
@@ -136,5 +136,11 @@
     <None Include="..\shaders_P3\shaderPlant.vert">
       <Filter>shaders</Filter>
     </None>
+    <None Include="..\shaders_P3\shaderHeightMapFogFloor.frag">
+      <Filter>shaders</Filter>
+    </None>
+    <None Include="..\shaders_P3\shaderHeightMapFogFloor.vert">
+      <Filter>shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
